corrected line height so that email address is not clipped on bottom edge

--- a/scss/modules/_email.scss
+++ b/scss/modules/_email.scss
@@ -95,6 +95,7 @@
     font-family: $font-main;
     transition: $transition-button;
     color: grey;
+    line-height: 1.2em;
 
     text-overflow: ellipsis;
     word-wrap: break-word;
